SOHO-7444 - Fixed sort indicator was not showing with Datagrid

--- a/src/components/datagrid/_datagrid.scss
+++ b/src/components/datagrid/_datagrid.scss
@@ -349,6 +349,12 @@ $datagrid-short-row-height: 23px;
         }
       }
 
+      &.l-center-text.sort-indicator-can-fit {
+        .datagrid-header-text {
+          margin-top: 5px;
+        }
+      }
+
       .datagrid-checkbox {
         top: -13px;
       }
@@ -1946,11 +1952,23 @@ $datagrid-short-row-height: 23px;
 
     // Centering Text
     .datagrid-column-wrapper.l-center-text {
-      width: calc(100% + 20px);
+      width: 100%;
 
-      .datagrid-header-text {
-        display: inline-block;
-        margin-top: 10px;
+      .sort-indicator {
+        display: none;
+      }
+
+      &.sort-indicator-can-fit {
+        width: calc(100% + 20px);
+
+        .sort-indicator {
+          display: inline-block;
+        }
+
+        .datagrid-header-text {
+          display: inline-block;
+          margin-top: 10px;
+        }
       }
     }
 
